<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu_white_24dp"
        app:layout_constraintTop_toTopOf="@+id/toolbar1"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar1"
        app:layout_constraintStart_toStartOf="@+id/toolbar1"
        android:layout_margin="16dp"
        />

    <ImageView
        android:id="@+id/iv_santader"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_banco_santander_logotipo_1"
        app:layout_constraintTop_toTopOf="@+id/toolbar1"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar1"
        app:layout_constraintStart_toStartOf="@+id/toolbar1"
        app:layout_constraintEnd_toEndOf="@+id/toolbar1"
        />

    <ImageView
        android:id="@+id/iv_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_notifications_none_white_24dp"
        app:layout_constraintTop_toTopOf="@+id/toolbar1"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar1"
        app:layout_constraintRight_toRightOf="@+id/toolbar1"
        android:layout_margin="16dp"
        />

    <ImageView
        android:id="@+id/iv_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintTop_toBottomOf="@+id/toolbar1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/redPrimary"
        />

    <TextView
        android:id="@+id/tv_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ola"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar1"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="William James"
        android:layout_marginLeft="6dp"
        app:layout_constraintStart_toEndOf="@+id/tv_hi"
        app:layout_constraintTop_toTopOf="@+id/tv_hi"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tv_ag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ag 2030"
        app:layout_constraintStart_toStartOf="@+id/tv_hi"
        app:layout_constraintTop_toBottomOf="@+id/tv_hi"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cc 01097954-4"
        app:layout_constraintStart_toEndOf="@+id/tv_ag"
        app:layout_constraintTop_toTopOf="@+id/tv_ag"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/main_card"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_ag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_update_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="16dp"
                />

            <TextView
                android:id="@+id/tv_sd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/iv_update"
                app:layout_constraintStart_toEndOf="@+id/iv_update"
                app:layout_constraintBottom_toBottomOf="@+id/iv_update"
                android:layout_marginLeft="16dp"
                android:textSize="18sp"
                android:text="@string/txt_saldo_disponivel"
                />

            <ImageView
                android:id="@+id/iv_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_expand_less_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="16dp"
                />

            <TextView
                android:id="@+id/tv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/iv_update"
                app:layout_constraintStart_toStartOf="@+id/iv_update"
                android:layout_marginTop="24dp"
                android:text="R$ 1.324,64"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_saldo_mais_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_saldo"
                app:layout_constraintStart_toStartOf="@+id/tv_saldo"
                android:layout_marginTop="8dp"
                android:text="@string/txt_saldo_limite"
                />

            <TextView
                android:id="@+id/tv_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tv_saldo_mais_limite"
                app:layout_constraintStart_toEndOf="@+id/tv_saldo_mais_limite"
                android:layout_marginLeft="8dp"
                android:text="R$ 2.234,64"
                />

            <View
                android:id="@+id/v_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_saldo_mais_limite"
                android:layout_margin="16dp"
                android:background="@android:color/darker_gray"
                />

            <TextView
                android:id="@+id/tv_extrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/v_line"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/txt_ver_extrato"
                android:textColor="@color/redSecondary"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_pagar"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:layout_constraintTop_toBottomOf="@+id/main_card"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/iv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tv_pagar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/iv_pagar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/txt_pagar"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_transferir"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:layout_constraintTop_toTopOf="@+id/card_pagar"
        app:layout_constraintStart_toEndOf="@+id/card_pagar"
        app:layout_constraintEnd_toStartOf="@+id/card_recarga"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/iv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payments_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tv_transferir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/iv_transferir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/txt_transferir"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_recarga"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:layout_constraintTop_toTopOf="@+id/card_pagar"
        app:layout_constraintEnd_toEndOf="@+id/main_card"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/iv_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_stay_primary_portrait_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tv_recarga"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/iv_recarga"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/txt_recarrgar"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/iv_card_final"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/card_pagar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:background="@color/redPrimary"
        />

    <TextView
        android:id="@+id/tv_card_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cartao_final"
        app:layout_constraintTop_toTopOf="@+id/iv_card_final"
        app:layout_constraintBottom_toBottomOf="@+id/iv_card_final"
        app:layout_constraintLeft_toLeftOf="@+id/iv_card_final"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tv_card_final_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tv_card_final"
        app:layout_constraintLeft_toRightOf="@+id/tv_card_final"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="0033"
        />

    <ImageView
        android:id="@+id/iv_expand_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_more_black_24dp"
        app:layout_constraintTop_toTopOf="@+id/iv_card_final"
        app:layout_constraintBottom_toBottomOf="@+id/iv_card_final"
        app:layout_constraintRight_toRightOf="@+id/iv_card_final"
        android:layout_margin="16dp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>